--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
     "boot2docker"
   ],
   "author": "Todd Kennedy <todd@selfassembled.org>",
-  "license": "MIT",
+  "license": "Apache 2",
   "bugs": {
     "url": "https://github.com/scriptollc/nodoecker/issues"
   },
   "homepage": "https://github.com/scriptollc/nodoecker",
   "dependencies": {
     "bluebird": "~2.9.24",
+    "byte-size": "~0.1.0",
     "docker-remote-api": "~4.4.1",
     "es6-promise": "~2.0.1",
-    "native-or-bluebird": "~1.2.0"
+    "native-or-bluebird": "~1.2.0",
+    "xtend": "~4.0.0"
   }
 }
