--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "bluebird": "~2.9.25",
     "byte-size": "~0.1.0",
     "debug": "~2.2.0",
-    "docker-remote-api": "~4.4.1",
+    "docker-remote-api-as-promised": "~1.0.0",
     "native-or-bluebird": "~1.2.0",
     "xtend": "~4.0.0"
   }
