--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A wrapper around docker-remote-api",
   "main": "index.js",
   "scripts": {
-    "test": "tap test/*.spec.js"
+    "test": "tap test.js"
   },
   "repository": {
     "type": "git",
